--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Work in progress standalone verification website.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/ib-ai/Verify#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "connect-redis": "^4.0.3",
+    "discord.js": "^11.5.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "form-data": "^2.5.1",
+    "node-fetch": "^2.6.0",
+    "redis": "^2.8.0",
+    "url": "^0.11.0"
   }
 }
