Set web container to always restart on crash

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   ibdiscord_web:
     build: .
     env_file: details.env
+    restart: always
     depends_on:
      - redis
     networks: 
