Add traefik labels

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
     networks: 
      - web
      - backend
+    labels: 
+     - "traefik.enable=true"
+     - "traefik.http.routers.verify-web.rule=Host(`ibdiscord.team`) || Host(`www.ibdiscord.team`)"
+     - "traefik.http.routers.verify-web.entrypoints=web"
+     - "traefik.http.routers.verify-web.middlewares=redirect@file"
+     - "traefik.http.routers.verify-secured.rule=Host(`ibdiscord.team`) || Host(`www.ibdiscord.team`)"
+     - "traefik.http.routers.verify-secured.entrypoints=web-secured"
+     - "traefik.http.routers.verify-secured.tls.certresolver=mytlschallenge"
 
   redis:
     image: redis
