--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,12 @@
-version: '3.5'
+version: '3.7'
+
 services:
-  ibdiscord_verify:
+  ibdiscord_web:
     build: .
     env_file: details.env
     restart: always
     depends_on:
      - redis
-    networks: 
-     - web
-     - backend
-    labels: 
-     - "traefik.enable=true"
-     - "traefik.http.routers.verify-web.rule=Host(`ibdiscord.team`) || Host(`www.ibdiscord.team`)"
-     - "traefik.http.routers.verify-web.entrypoints=web"
-     - "traefik.http.routers.verify-web.middlewares=redirect@file"
-     - "traefik.http.routers.verify-secured.rule=Host(`ibdiscord.team`) || Host(`www.ibdiscord.team`)"
-     - "traefik.http.routers.verify-secured.entrypoints=web-secured"
-     - "traefik.http.routers.verify-secured.tls.certresolver=mytlschallenge"
 
   redis:
     image: redis
-    networks: 
-     - backend
-
-networks:
-  backend:
-    external: false
-  web:
-    external: true
